--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "AI-powered chat app with Cohere API",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -19,6 +19,6 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "author": "Your Name",
+  "author": "© Likhon Sheikh",
   "license": "MIT"
 }
